--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
   font-family: sans-serif;
 }
 
+
 #form-wrapper {
   width: 100%;
 
@@ -52,4 +53,8 @@ input[type="text"], input[type="number"] {
   text-align: center;
   padding: 10px;
   margin: 20px;
+}
+
+.hidden {
+  display: none;
 }
