--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,29 @@ body {
   font-family: sans-serif;
 }
 
+h1 {
+  text-align: center;
+}
 
 #form-wrapper {
   width: 100%;
-
 }
 
-h1 {
+#initial-form {
+  padding-bottom: 2vh;
   text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#initial-form button {
+  margin: 10px;
+}
+
+
+
+img#picture {
+  width: 30vw;
 }
 
 #new-item-form {
@@ -57,20 +72,4 @@ input[type="text"], input[type="number"] {
 
 .hidden {
   display: none;
-}
-
-#boxing {
-  background-image: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("boxing.jpeg");
-}
-
-#wrestling {
- background-image: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("wrestling.jpeg");
-}
-
-#bjj {
-  background-image: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("bjj.jpeg");
-}
-
-#weights {
-  background-image: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("weights.jpeg");
 }
